@@ -35,6 +35,5 @@
     //ex2: $arrConfModule['dsn_conn_database'] = "mysql://user:password@ip_host_sever_mysql/base_name";
 
     $arrConfModule['dsn_conn_database'] = 'mysql://asterisk:asterisk@localhost/call_center';
-    $arrConfModule['dsn_conn_database_asterisk'] = 'mysql://asteriskuser:eLaStIx.asteriskuser.2oo7@localhost/asterisk';
 
 ?>
