@@ -36,6 +36,7 @@ function _moduleContent(&$smarty, $module_name)
     //include module files
     include_once "modules/$module_name/configs/default.conf.php";
     include_once "modules/$module_name/libs/paloSantoReportedeTroncalesusadasporHoraeneldia.class.php";
+    include_once "libs/paloSantoConfig.class.php";
 
     //include file language agree to elastix configuration
     //if file language not exists, then include language by default (en)
@@ -58,8 +59,15 @@ function _moduleContent(&$smarty, $module_name)
     $local_templates_dir="$base_dir/modules/$module_name/".$templates_dir.'/'.$arrConf['theme'];
 
     //conexion resource
+    $pConfig = new paloConfig("/etc", "amportal.conf", "=", "[[:space:]]*=[[:space:]]*");
+    $arrConfig = $pConfig->leer_configuracion(false);
+    $dsnAsteriskCdr = $arrConfig['AMPDBENGINE']['valor']."://".
+                      $arrConfig['AMPDBUSER']['valor']. ":".
+                      $arrConfig['AMPDBPASS']['valor']. "@".
+                      $arrConfig['AMPDBHOST']['valor']."/asterisk";
+
     $pDB = new paloDB($arrConf['dsn_conn_database']);
-    $pDB_asterisk = new paloDB($arrConf['dsn_conn_database_asterisk']);
+    $pDB_asterisk = new paloDB($dsnAsteriskCdr);
 
     //actions
     $accion = getAction();
